# brain-food

./: .gitignore  LICENSE
accumulate-array-elements/: main.cpp
ascending-descending/: CMakeLists.txt  main.cpp
atomic/: CMakeLists.txt  main.cpp
binary-addition/: main.cpp
create-phone-number/: main.cpp
funtors-and-overloading-parenthesis-operator/: main.cpp
help-the-bookseller/: main.cpp
input-only-numbers/: CMakeLists.txt  main.cpp
iterator-invalidation/: CMakeLists.txt  main.cpp
letter-party/: main.cpp
lowest-common-ancestor/: main.cpp
mixin/: main.cpp
move/: main.cpp
multiples-of-3-or-5/: main.cpp
mutex/: CMakeLists.txt  main.cpp
optional/: CMakeLists.txt  main.cpp
override-logical-operators/: main.cpp
pointer-function/: main.cpp
ranges/: main.cpp
rgb-to-hex-conversion/: main.cpp
roman-numerals-encoder/: main.cpp
semantics-of-copy/: main.cpp
semantics-of-movement/: main.cpp
simple-dynamic-array/: CMakeLists.txt  main.cpp
snail-sort/: CMakeLists.txt  main.cpp
solid-single-responsibility-principle/: CMakeLists.txt  main.cpp
split-string/: main.cpp
static-constructor/: main.cpp
string-ends-with/: main.cpp
string-to-int/: CMakeLists.txt  main.cpp
subprocesses/: CMakeLists.txt  main.cpp
sudoku-validator/: main.cpp
sum-array-elements/: main.cpp
thread/: CMakeLists.txt  main.cpp
two-sum/: main.cpp
typecast-overload/: main.cpp
union/: CMakeLists.txt  main.cpp
visitor-variant/: CMakeLists.txt  main.cpp
vowel-count/: main.cpp
wait/: CMakeLists.txt  main.cpp
weak-ptr/: main.cpp
